--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,8 +1,7 @@
 book_filename: "R4TH"
-output_dir: docs
+repo: "https://github.com/jaisong-sith/R4TH/"
 delete_merged_file: true
-edit: https://github.com/jaisong-sith/R4TH/edit/master/%s
-view: https://github.com/jaisong-sith/R4TH/blob/master/%s
+output_dir: docs
 language:
   ui:
     chapter_name: "Chapter "
